--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="page">
             <div class="logo">
 
-                <img src="images/instagram.png" alt="instagram" style="width: 175px; ">
+                <img src="Logo-Instagram.png" alt="instagram" style="width: 175px; ">
             </div>
 
             <br />
